remove err message on screen

--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@ function getWeather() {
       lastDateTime = dateTime;
     }
   }).catch((err) => {
-    document.getElementById('console').innerHTML = "Couldn't fetch data!";
-    document.getElementById('console').innerHTML += "<br>err" + err;
+    //document.getElementById('console').innerHTML = "Couldn't fetch data!";
+    //document.getElementById('console').innerHTML += "<br>err" + err;
     console.err(err)
   });
   return false;
