--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ function getWeather() {
   }).catch((err) => {
     //document.getElementById('console').innerHTML = "Couldn't fetch data!";
     //document.getElementById('console').innerHTML += "<br>err" + err;
-    console.err(err)
+    console.log(err)
   });
   return false;
 }
