--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ function getWeather() {
   let url = base_url + "/lon/" + lon +
     "/lat/" + lat + "/data.json";
 
-  console.log("base_url", base_url);
+  console.log("url", url);
 
   document.getElementById('my-console').innerHTML = "Getting Data";
   get(url).then((data) => {
