--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ function addCellStyled(parent, cellindex, value, style) {
 function get(url) {
   return new Promise((resolve, reject) => {
     const req = new XMLHttpRequest();
+    console.log("get:url", url);
     req.open('GET', url);
     req.onload = () => req.status === 200 ? resolve(req.response) : reject(Error(req.statusText));
     req.onerror = (e) => reject(Error(`Network Error: ${e}`));
