auto enable soft keyboard

--- a/autocomplete.html
+++ b/autocomplete.html
@@ -161,6 +161,9 @@
 
 	  });
 
+          // Automatic display soft keyboard on ios
+	  document.body.ontouchend = function() { document.querySelector"#plats-search input").focus(); };
+
 
 
 	</script>
