--- a/autocomplete.html
+++ b/autocomplete.html
@@ -162,7 +162,7 @@
 	  });
 
           // Automatic display soft keyboard on ios
-	  document.body.ontouchend = function() { document.querySelector"#plats-search input").focus(); };
+	  //document.body.ontouchend = function() { document.querySelector"#plats-search input").focus(); };
 
 
 
