more auto popup keyboard test

--- a/autocomplete.html
+++ b/autocomplete.html
@@ -164,6 +164,9 @@
           // Automatic display soft keyboard on ios
 	  //document.body.ontouchend = function() { document.querySelector"#plats-search input").focus(); };
 
+	  window.onload = function() {
+	    var input = document.querySelector("#plats-search input").focus();
+	  }
 
 
 	</script>
