--- a/autocomplete.html
+++ b/autocomplete.html
@@ -2,7 +2,7 @@
 <head>
   <title>Anders Väder - Sök plats</title>
   <meta charset=UTF-8>
-  <meta name=viewport content="width=device-width, initial-scale=1.8">
+  <meta name=viewport content="width=device-width, initial-scale=1.2">
   <link rel=icon href=images/favicon.png>
 
   <link rel='stylesheet' href='https://cdn.rawgit.com/LeaVerou/awesomplete/gh-pages/awesomplete.css'/>
@@ -113,8 +113,13 @@
 	        region = location.country;
 	      }
 
+
 	      // Create a place label
-	      let fullplace = location.place + ', ' + region;
+	      let fullplace = location.place;
+	      // Only add region if different
+	      if(location.place != region){
+	        fullplace += ', ' + region;
+	      }
 
               // Add lat/lon to data object
 	      data = {
@@ -138,7 +143,8 @@
 	  *
 	  */
 	  let myInput = document.querySelector("#plats-search input");
-	  let myOptions = null;
+	  let myOptions = {"minChars": 1,
+	                   "filter": Awesomplete.FILTER_STARTSWITH};
 	  let myAwesome = new Awesomplete(myInput, myOptions);
           myInput.addEventListener('input', function() {
               getNewListWithAjax(myAwesome, myInput);
