add utf8 to scripts

--- a/autocomplete.html
+++ b/autocomplete.html
@@ -17,8 +17,8 @@
 		<h2>Välj/Sök plats</h2>
 		<label class=""><input name="lod" id="locinput" type="text" autofocus></label>
 
-		<script src='https://cdn.rawgit.com/LeaVerou/awesomplete/gh-pages/awesomplete.js' crossorigin=''></script>
-		<script src='autocomplete.js' crossorigin=''></script>
+		<script src="https://cdn.rawgit.com/LeaVerou/awesomplete/gh-pages/awesomplete.js" crossorigin=""></script>
+		<script src="autocomplete.js" charset="UTF-8"></script>
 
 		<script>
 
