Add SMHI as data source

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       <!--<tr><th>DateTime</th><th>Temperature</th></tr>-->
     </table>
   </div>
+  <div>
+    <br>
+  </div>
+  <div id="aboutDiv">
+  </div>
   <!--
   <div>
     <form id="weatherform" onsubmit='return getWeather(event)'>
