--- a/autocomplete.html
+++ b/autocomplete.html
@@ -19,7 +19,12 @@
 		<h2>Välj/Sök plats</h2>
 		<label class=""><input name="lod" id="locinput" type="text" autofocus></label>
 	</section>
-
+	<div>
+		<br>
+	</div>
+	<div>
+		Platser hämtas från SMHI via SMHI Open Data API
+	</div>
 
 	<script src="https://cdn.rawgit.com/LeaVerou/awesomplete/gh-pages/awesomplete.js" crossorigin=""></script>
 	<script src="autocomplete.js" charset="UTF-8"></script>
