smaller about font

--- a/autocomplete.html
+++ b/autocomplete.html
@@ -11,6 +11,10 @@
 		body {
 			background: #F3F3F3;
 		}
+        div.aboutDiv {
+            font-size: small;
+        }
+
 	</style>
 </head>
 
@@ -22,7 +26,7 @@
 	<div>
 		<br>
 	</div>
-	<div>
+	<div class="aboutDiv" id="aboutDiv">
 		Platser hämtas från SMHI via SMHI Open Data API
 	</div>
 
