refactoring into new files and filenames

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 </body>
 
 <script src="suncalc.js"></script>
+<script src="common.js" charset="UTF-8"></script>
 <script src="vader.js" charset="UTF-8"></script>
 
 <script>
