--- a/platser.html
+++ b/platser.html
@@ -4,8 +4,8 @@
     <title>Anders Väder - Sök plats</title>
     <meta charset=UTF-8>
     <meta name=viewport content="width=device-width, initial-scale=1.2">
-    <link rel=icon href=images/favicon.png> <link rel='stylesheet'
-        href='https://cdn.rawgit.com/LeaVerou/awesomplete/gh-pages/awesomplete.css' />
+    <link rel=icon href=images/favicon.png> 
+    <link rel='stylesheet' href='https://cdn.rawgit.com/LeaVerou/awesomplete/gh-pages/awesomplete.css' />
 
     <style>
         body {
@@ -15,6 +15,33 @@
         div.aboutDiv {
             font-size: small;
         }
+
+        .recent-searches {
+            margin-top: 10px;
+        }
+
+        .recent-search-item {
+            cursor: pointer;
+            color: blue;
+            text-decoration: underline;
+        }
+
+        .recent-search-item:hover {
+            text-decoration: none;
+        }
+
+        @media (max-width: 1080px) {
+            body {
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-end;
+                height: 100vh;
+            }
+
+            #plats-search {
+                margin-bottom: 20px;
+            }
+        }
     </style>
 </head>
 
@@ -23,6 +50,7 @@
         <h2>Välj/Sök plats</h2>
         <label class=""><input name="lod" id="locinput" type="text" autofocus></label>
     </section>
+    <div class="recent-searches" id="recent-searches"></div>
     <div>
         <br>
     </div>
@@ -40,6 +68,7 @@
 
         window.onload = function () {
             var input = document.querySelector("#plats-search input").focus();
+            displayRecentSearches();
         }
 
         document.body.ontouchend = function () {
