--- a/platser.html
+++ b/platser.html
@@ -18,12 +18,14 @@
 
         .recent-searches {
             margin-top: 10px;
+            line-height: 1.5;
         }
 
         .recent-search-item {
             cursor: pointer;
             color: blue;
             text-decoration: underline;
+            display: block;
         }
 
         .recent-search-item:hover {
